New Readme update.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
-Jamesmax Munene
+Jamesmax Munene <jamesmaxmunene@gmail.com>
 Mwanthi Waita <elvismwanthi@gmail.com>
 
 Jennifer Huang <133@holbertonschool.com>
